fix unchanged target name

--- a/tilegx-linux-gnu-binutils/PKGBUILD
+++ b/tilegx-linux-gnu-binutils/PKGBUILD
@@ -4,7 +4,7 @@ _target=tilegx-linux-gnu
 pkgname=$_target-binutils
 pkgver=2.25.1
 pkgrel=1
-pkgdesc='A set of programs to assemble and manipulate binary and object files for the ARM64 target'
+pkgdesc='A set of programs to assemble and manipulate binary and object files for the TILE-Gx target'
 arch=(i686 x86_64)
 url='http://www.gnu.org/software/binutils/'
 license=(GPL)
