--- a/tilegx-linux-gnu-gdb/PKGBUILD
+++ b/tilegx-linux-gnu-gdb/PKGBUILD
@@ -4,7 +4,7 @@ _target=tilegx-linux-gnu
 pkgname=$_target-gdb
 pkgver=7.10.1
 pkgrel=1
-pkgdesc='The GNU Debugger for the ARM64 target'
+pkgdesc='The GNU Debugger for the TILE-Gx target'
 arch=(i686 x86_64)
 url='http://www.gnu.org/software/gdb/'
 license=(GPL3)
