--- a/tilegx-linux-gnu-gcc-stage1/PKGBUILD
+++ b/tilegx-linux-gnu-gcc-stage1/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=5.3.0
 _islver=0.15
 pkgrel=1
 #_snapshot=5-20150616
-pkgdesc='The GNU Compiler Collection - cross compiler for ARM64 target'
+pkgdesc='The GNU Compiler Collection - cross compiler for TILE-Gx target'
 arch=(i686 x86_64)
 url='http://gcc.gnu.org/'
 license=(GPL LGPL FDL)
